<resources>
    <string name="app_name">Photo And Video Editor</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="sign_up">SIGN UP</string>
    <string name="logout">LOGOUT</string>
    <string name="mail">Mail</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="facebook_app_id">150605041316648</string>
    <string name="facebook_client_token">339bef4815b6779f03ee20e167427d20</string>
</resources>