<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard">


    <TextView
        android:id="@+id/wel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wel"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/name" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/mail" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:padding="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="22sp" />

</RelativeLayout>