<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_blue"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="161.7dp"
        android:layout_height="169dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/the_designer"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineStart" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gontserratbold"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/regusername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/back_blue"
            android:fontFamily="@font/poppinssemibold"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/cardUsername">

        <EditText
            android:id="@+id/reguseremail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/back_blue"
            android:ems="10"
            android:fontFamily="@font/poppinssemibold"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/cardEmail">

        <EditText
            android:id="@+id/reguserpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/back_blue"
            android:ems="10"
            android:fontFamily="@font/poppinssemibold"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppinssemibold"
        android:text="Register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/cardPassword" />

    <TextView
        android:id="@+id/toLoginclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gontserratbold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/registerbtn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/registerbtn"
        app:layout_constraintEnd_toEndOf="@+id/registerbtn"
        app:layout_constraintStart_toStartOf="@+id/registerbtn"
        app:layout_constraintTop_toTopOf="@+id/registerbtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>
